# kusama-kitties

./: .gitignore  .travis.yml  Cargo.toml  README.md
kkrml/kitties/: Cargo.toml
kkrml/kitties/src/: constants.rs  kitty.rs  lib.rs  linked_item.rs  random.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: check.sh  restart.sh
src/: chain_spec.rs  cli.rs  main.rs  service.rs
