[package]
name = "kusama-kitties"
version = "0.0.1"
authors = ["Bryan Chen <xlchen1291@gmail.com>"]
build = "build.rs"
edition = "2018"

[profile.release]
panic = "unwind"

[[bin]]
name = "kusama-kitties"
path = "src/main.rs"

[dependencies]
derive_more = "0.14.0"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
sr-io = { git = "https://github.com/paritytech/substrate.git" }
substrate-cli = { git = "https://github.com/paritytech/substrate.git" }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate.git" }
substrate-executor = { git = "https://github.com/paritytech/substrate.git" }
substrate-service = { git = "https://github.com/paritytech/substrate.git" }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate.git" }
transaction-pool = { package = "substrate-transaction-pool", git = "https://github.com/paritytech/substrate.git" }
network = { package = "substrate-network", git = "https://github.com/paritytech/substrate.git" }
babe = { package = "substrate-consensus-babe", git = "https://github.com/paritytech/substrate.git" }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/paritytech/substrate.git" }
grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/paritytech/substrate.git" }
grandpa-primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/paritytech/substrate.git" }
substrate-client = {  git = "https://github.com/paritytech/substrate.git" }
basic-authorship = { package = "substrate-basic-authorship", git = "https://github.com/paritytech/substrate.git" }
kusama-kitties-runtime = { path = "runtime" }

[build-dependencies]
vergen = "3"

[workspace]
members = [ "runtime", "kkrml/*" ]
exclude = [ "runtime/wasm" ]
