[package]
name = "kusama-kitties-runtime"
version = "0.0.1"
authors = ["Bryan Chen <xlchen1291@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", default-features = false }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", default-features = false }
version = { package = "sr-version", git = "https://github.com/paritytech/substrate.git", default-features = false }
support = { package = "srml-support", git = "https://github.com/paritytech/substrate.git", default-features = false }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate.git", default-features = false }
substrate-session = { git = "https://github.com/paritytech/substrate.git", default-features = false }
balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate.git", default-features = false }
babe = { package = "srml-babe", git = "https://github.com/paritytech/substrate.git", default-features = false }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/paritytech/substrate.git", default-features = false }
executive = { package = "srml-executive", git = "https://github.com/paritytech/substrate.git", default-features = false }
indices = { package = "srml-indices", git = "https://github.com/paritytech/substrate.git", default-features = false }
grandpa = { package = "srml-grandpa", git = "https://github.com/paritytech/substrate.git", default-features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate.git", default-features = false }
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate.git", default-features = false }
sudo = { package = "srml-sudo", git = "https://github.com/paritytech/substrate.git", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", default-features = false }
client = { package = "substrate-client", git = "https://github.com/paritytech/substrate.git", default-features = false }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/paritytech/substrate.git", default-features = false }

kitties = { package = "kkrml-kitties", path = "../kkrml/kitties", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2" }

[features]
default = ["std"]
no_std = []
std = [
	"codec/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"babe/std",
	"babe-primitives/std",
	"executive/std",
	"indices/std",
	"grandpa/std",
	"primitives/std",
	"sr-primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"offchain-primitives/std",
	"substrate-session/std",
    "kitties/std",
]
