[package]
name = "kkrml-kitties"
version = "0.0.1"
authors = ["Bryan Chen <xlchen1291@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", default-features = false }
support = { package = "srml-support", git = "https://github.com/paritytech/substrate.git", default-features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate.git", default-features = false }
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate.git", default-features = false }
runtime_io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", default-features = false }
rand = { version = "0.7", default-features = false }
rand_chacha = { version = "0.2", default-features = false }

[dev-dependencies]
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate.git" }
balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate.git" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sr-primitives/std",
	"support/std",
	"system/std",
	"timestamp/std",
	"runtime_io/std",
	"rstd/std",
	"rand/std",
	"rand_chacha/std",
]
